[package]
name = "day-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
anyhow = "1.0.75"
itertools = "0.12.0"

[features]
# Defines a feature named `webp` that does not enable any other features.
joker = []